--- a/index.html
+++ b/index.html
@@ -153,17 +153,91 @@
     </div>
   </section>
 
+  <!-- Section Testimonials -->
 
-  
-  <!-- <section class="section-card-popular">
+  <section class="section-testimonials" id="testimonials">
+    <h1 class="text-testi">Our Testimonials</h1>
     <div class="container">
       <div class="row">
-       
-        
+        <div class="col-md-6">
+          <div class="card card-testimonials shadow-sm">
+            <div class="card-body">
+              <p class="card-text"> " Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, voluptatibus vel! Aliquam vero vel dolorem ullam libero labore sunt ab veniam sequi, totam numquam, sint odio delectus perspiciatis cum reiciendis. "</p>
+              <img src="images/user-1.png" alt="" class="float-right"> 
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card card-testimonials shadow-sm">
+            <div class="card-body">
+              <p class="card-text">" Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut ducimus consequuntur temporibus velit culpa nihil corrupti sed maxime hic veniam? Labore rem dolorum repudiandae asperiores! Enim totam eos debitis non! "</p>
+              <img src="images/user-1.png" alt="" class="float-right">  
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </section> -->
+
+  </section>
 </main>
+
+<footer class="section-footer mt-5 mb-4 border-top">
+  <div class="container pt-5 pb-5">
+      <div class="col-12">
+          <div class="row">
+              <div class="col-12 col-lg-3">
+                  <h5>
+                      FEATURES
+                  </h5>
+                  <ul class="list-unstyled">
+                      <li><a href="#">Reviews</a></li>
+                      <li><a href="#">Comunity</a></li>
+                      <li><a href="#">Social Media Kit</a></li>
+                      <li><a href="#">Affiliate</a></li>
+                  </ul>
+              </div>
+              <div class="col-12 col-lg-3">
+                  <h5>
+                      ACCOUNT
+                  </h5>
+                  <ul class="list-unstyled">
+                      <li><a href="#">Refund</a></li>
+                      <li><a href="#">Security</a></li>
+                      <li><a href="#">Reward</a></li>
+                  </ul>
+              </div>
+              <div class="col-12 col-lg-3">
+                  <h5>
+                      COMPANY
+                  </h5>
+                  <ul class="list-unstyled">
+                      <li><a href="#">Carrer</a></li>
+                      <li><a href="#">Help Center</a></li>
+                      <li><a href="#">Media</a></li>
+                  </ul>
+              </div>
+              <div class="col-12 col-lg-3">
+                  <h5>
+                      GET CONNECTED
+                  </h5>
+                  <ul class="list-unstyled">
+                      <li><a href="#">Surabaya</a></li>
+                      <li><a href="#">Indonesia</a></li>
+                      <li><a href="#">081-0387-6554</a></li>
+                      <li><a href="#">support@yujalanyu.id</a></li> 
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="container-fluid">
+      <div class="row border-top justify-content-center align-items-center pt-4">
+          <div class="col-auto text-gray-500 font-weight-light">
+              2020 Copyright YuJalanYu ~ All Right Reserved ~ Made in Surabaya
+          </div>
+      </div>
+  </div>
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
