--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/v4-shims.css">
     <link rel="stylesheet" href="libraries/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap" rel="stylesheet">
@@ -232,8 +234,13 @@
   </div>
   <div class="container-fluid">
       <div class="row border-top justify-content-center align-items-center pt-4">
-          <div class="col-auto text-gray-500 font-weight-light">
-              2020 Copyright YuJalanYu ~ All Right Reserved ~ Made in Surabaya
+          <div class="col-auto text-gray-500 font-weight-light text-center">
+            <h2>2020 Copyright YuJalanYu  
+              <br> 
+              Build in Surabaya 
+              <br> Made with 
+              <i class="fas fa-heart" style="color: rgb(252, 124, 183);"></i>
+            </h2>
           </div>
       </div>
   </div>
