--- a/travel-package.html
+++ b/travel-package.html
@@ -201,8 +201,13 @@
   </div>
   <div class="container-fluid">
       <div class="row border-top justify-content-center align-items-center pt-4">
-          <div class="col-auto text-gray-500 font-weight-light">
-              2020 Copyright YuJalanYu ~ All Right Reserved ~ Made in Surabaya
+          <div class="col-auto text-gray-500 font-weight-light text-center">
+            <h2>2020 Copyright YuJalanYu  
+                <br> 
+                Build in Surabaya 
+                <br> Made with 
+                <i class="fas fa-heart" style="color: rgb(252, 124, 183);"></i>
+              </h2>
           </div>
       </div>
   </div>
